--- a/module/CountryReferential/view/country-referential/admin/index.phtml
+++ b/module/CountryReferential/view/country-referential/admin/index.phtml
@@ -14,7 +14,7 @@
     <tr>
         <td><?php echo $country['nom_fr_fr']; ?></td>
         <td>
-            <a href="<?php //echo $this->url(''); ?>">Modifier</a>
+            <a href="<?php echo $this->url('api_admin_update', ['code' => $country['code']]); ?>">Modifier</a>
             <a href="<?php echo $this->url('api_admin_delete', ['code' => $country['code']]); ?>">Supprimer</a>
         </td>
     </tr>
